Nova estrutura de cards: Título, Cliente, Descritivo - Removidas métricas exageradas e seção Resultado

--- a/index.html
+++ b/index.html
@@ -400,17 +400,13 @@
                 <div class="project-card" data-category="modernization">
                     <div class="project-content">
                         <h3 class="project-title">Modernização de Plataforma de Dados</h3>
-                        <div class="project-header">
-                            <hr class="project-divider">
-                            <div class="project-info">
-                                <strong>Cliente:</strong> Centauro<br>
-                                <br>
-                                <strong>Resultado:</strong> Redução de 40% nos custos de infraestrutura e melhoria de 60% na performance
-                            </div>
+                        <hr class="project-divider">
+                        <div class="project-info">
+                            <strong>Cliente:</strong> Centauro
                         </div>
                         <br>
-                        <div class="project-summary">
-                            <strong>Resumo do Projeto:</strong> Liderança técnica de equipe de 15 pessoas na migração completa de ambiente on-premise para AWS, implementando Data Lake e Data Warehouse modernos com Snowflake. O projeto incluiu implementação de governança de dados, automação de pipelines ETL/ELT e monitoramento em tempo real.
+                        <div class="project-description">
+                            <strong>Descritivo:</strong> Migração completa de ambiente on-premise para AWS, implementando Data Lake e Data Warehouse modernos com Snowflake. Desenvolvimento de pipelines ETL/ELT automatizados, implementação de governança de dados e monitoramento em tempo real para otimização de performance e redução de custos operacionais.
                         </div>
                     </div>
                 </div>
@@ -418,17 +414,13 @@
                 <div class="project-card" data-category="realtime">
                     <div class="project-content">
                         <h3 class="project-title">Arquitetura de Eventos em Tempo Real</h3>
-                        <div class="project-header">
-                            <hr class="project-divider">
-                            <div class="project-info">
-                                <strong>Cliente:</strong> Centauro<br>
-                                <br>
-                                <strong>Resultado:</strong> Redução de 60% no tempo de processamento de dados e implementação de streaming em tempo real
-                            </div>
+                        <hr class="project-divider">
+                        <div class="project-info">
+                            <strong>Cliente:</strong> Centauro
                         </div>
                         <br>
-                        <div class="project-summary">
-                            <strong>Resumo do Projeto:</strong> Implementação de arquitetura de eventos distribuídos com Confluent (Kafka) para streaming de dados em tempo real. Desenvolvimento de soluções de Data Mesh para clientes de grande porte, incluindo automação de pipelines ETL/ELT e monitoramento em tempo real.
+                        <div class="project-description">
+                            <strong>Descritivo:</strong> Implementação de arquitetura de eventos distribuídos com Confluent (Kafka) para streaming de dados em tempo real. Desenvolvimento de soluções de Data Mesh, automação de pipelines ETL/ELT e monitoramento em tempo real para processamento eficiente de dados.
                         </div>
                     </div>
                 </div>
@@ -436,34 +428,26 @@
                 <div class="project-card" data-category="omnichannel">
                     <div class="project-content">
                         <h3 class="project-title">Jornada Omnichannel</h3>
-                        <div class="project-header">
-                            <hr class="project-divider">
-                            <div class="project-info">
-                                <strong>Cliente:</strong> Centauro<br>
-                                <br>
-                                <strong>Resultado:</strong> Aumento de 30% nas vendas e melhoria de 50% na experiência do cliente
-                            </div>
+                        <hr class="project-divider">
+                        <div class="project-info">
+                            <strong>Cliente:</strong> Centauro
                         </div>
                         <br>
-                        <div class="project-summary">
-                            <strong>Resumo do Projeto:</strong> Desenvolvimento de Data Lake corporativo unificado para integração entre canais físicos e digitais. Implementação de pipelines de dados em tempo real, dashboards executivos integrados e governança de dados centralizada para proporcionar experiência omnichannel completa.
+                        <div class="project-description">
+                            <strong>Descritivo:</strong> Desenvolvimento de Data Lake corporativo unificado para integração entre canais físicos e digitais. Implementação de pipelines de dados em tempo real, dashboards executivos integrados e governança de dados centralizada para experiência omnichannel completa.
                         </div>
                     </div>
                 </div>
                 <div class="project-card" data-category="security">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Mascaramento e Desmascaramento de Dados</h3>
-                        <div class="project-header">
-                            <hr class="project-divider">
-                            <div class="project-info">
-                                <strong>Cliente:</strong> SolFacil<br>
-                                <br>
-                                <strong>Resultado:</strong> 100% de conformidade com LGPD/GDPR e redução de 90% nos riscos de vazamento de dados
-                            </div>
+                        <hr class="project-divider">
+                        <div class="project-info">
+                            <strong>Cliente:</strong> SolFacil
                         </div>
                         <br>
-                        <div class="project-summary">
-                            <strong>Resumo do Projeto:</strong> Desenvolvimento de solução robusta de segurança e privacidade de dados com implementação de estratégias de data masking em AWS. Criação de algoritmos de desmascaramento seletivo, integração com políticas de compliance (LGPD, GDPR), automação de processos de proteção e monitoramento completo de acesso a dados.
+                        <div class="project-description">
+                            <strong>Descritivo:</strong> Desenvolvimento de solução robusta de segurança e privacidade de dados com implementação de estratégias de data masking em AWS. Criação de algoritmos de desmascaramento seletivo, integração com políticas de compliance (LGPD, GDPR) e monitoramento completo de acesso a dados.
                         </div>
                     </div>
                 </div>
@@ -471,17 +455,13 @@
                 <div class="project-card" data-category="performance">
                     <div class="project-content">
                         <h3 class="project-title">CLI para Performance e Tuning "dbt-perf"</h3>
-                        <div class="project-header">
-                            <hr class="project-divider">
-                            <div class="project-info">
-                                <strong>Cliente:</strong> SolFacil<br>
-                                <br>
-                                <strong>Resultado:</strong> Melhoria de 70% na performance de queries DBT e redução de 50% no tempo de desenvolvimento
-                            </div>
+                        <hr class="project-divider">
+                        <div class="project-info">
+                            <strong>Cliente:</strong> SolFacil
                         </div>
                         <br>
-                        <div class="project-summary">
-                            <strong>Resumo do Projeto:</strong> Desenvolvimento de ferramenta CLI para análise e otimização de performance DBT com AWS Redshift. Implementação de boas práticas de desenvolvimento, automação de testes de performance e criação de documentação completa com guidelines para equipes de desenvolvimento.
+                        <div class="project-description">
+                            <strong>Descritivo:</strong> Desenvolvimento de ferramenta CLI para análise e otimização de performance DBT com AWS Redshift. Implementação de boas práticas de desenvolvimento, automação de testes de performance e criação de documentação completa com guidelines para equipes de desenvolvimento.
                         </div>
                     </div>
                 </div>
@@ -489,17 +469,13 @@
                 <div class="project-card" data-category="distribution">
                     <div class="project-content">
                         <h3 class="project-title">Distribuição de Carga - AWS Redshift DataShare</h3>
-                        <div class="project-header">
-                            <hr class="project-divider">
-                            <div class="project-info">
-                                <strong>Cliente:</strong> SolFacil<br>
-                                <br>
-                                <strong>Resultado:</strong> Melhoria de 80% na performance de queries e otimização de 60% no uso de recursos
-                            </div>
+                        <hr class="project-divider">
+                        <div class="project-info">
+                            <strong>Cliente:</strong> SolFacil
                         </div>
                         <br>
-                        <div class="project-summary">
-                            <strong>Resumo do Projeto:</strong> Implementação de técnicas avançadas de DataShare no AWS Redshift para otimização de distribuição de carga entre clusters. Desenvolvimento de estratégias de particionamento inteligente, monitoramento de performance e throughput, e automação de balanceamento de carga para máxima eficiência.
+                        <div class="project-description">
+                            <strong>Descritivo:</strong> Implementação de técnicas avançadas de DataShare no AWS Redshift para otimização de distribuição de carga entre clusters. Desenvolvimento de estratégias de particionamento inteligente, monitoramento de performance e throughput, e automação de balanceamento de carga para máxima eficiência.
                         </div>
                     </div>
                 </div>
@@ -507,17 +483,13 @@
                 <div class="project-card" data-category="finops">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de FinOps - Databricks e AWS</h3>
-                        <div class="project-header">
-                            <hr class="project-divider">
-                            <div class="project-info">
-                                <strong>Cliente:</strong> Mills<br>
-                                <br>
-                                <strong>Resultado:</strong> Redução de 45% nos custos de cloud e implementação de governança financeira completa
-                            </div>
+                        <hr class="project-divider">
+                        <div class="project-info">
+                            <strong>Cliente:</strong> Mills
                         </div>
                         <br>
-                        <div class="project-summary">
-                            <strong>Resumo do Projeto:</strong> Implementação de estratégias avançadas de FinOps para Databricks e AWS, incluindo otimização de custos com monitoramento avançado, governança financeira com alocação de custos por projeto, automação de relatórios de custos e alertas, resultando em redução significativa nos gastos com infraestrutura cloud.
+                        <div class="project-description">
+                            <strong>Descritivo:</strong> Implementação de estratégias avançadas de FinOps para Databricks e AWS, incluindo otimização de custos com monitoramento avançado, governança financeira com alocação de custos por projeto, automação de relatórios de custos e alertas para redução significativa nos gastos com infraestrutura cloud.
                         </div>
                     </div>
                 </div>
@@ -525,17 +497,13 @@
                 <div class="project-card" data-category="analytics">
                     <div class="project-content">
                         <h3 class="project-title">Projeto de Analytics de Clientes</h3>
-                        <div class="project-header">
-                            <hr class="project-divider">
-                            <div class="project-info">
-                                <strong>Cliente:</strong> Mills<br>
-                                <br>
-                                <strong>Resultado:</strong> Aumento de 35% na retenção de clientes e melhoria de 40% na precisão de campanhas de marketing
-                            </div>
+                        <hr class="project-divider">
+                        <div class="project-info">
+                            <strong>Cliente:</strong> Mills
                         </div>
                         <br>
-                        <div class="project-summary">
-                            <strong>Resumo do Projeto:</strong> Desenvolvimento de modelos avançados de segmentação de clientes com implementação de dashboards executivos. Análise profunda de comportamento e jornada do cliente, automação de relatórios e alertas preditivos, e integração completa com sistemas CRM e ERP para insights estratégicos.
+                        <div class="project-description">
+                            <strong>Descritivo:</strong> Desenvolvimento de modelos avançados de segmentação de clientes com implementação de dashboards executivos. Análise profunda de comportamento e jornada do cliente, automação de relatórios e alertas preditivos, e integração completa com sistemas CRM e ERP para insights estratégicos.
                         </div>
                     </div>
                 </div>
