--- a/index.html
+++ b/index.html
@@ -402,13 +402,11 @@
                         <h3 class="project-title">Modernização de Plataforma de Dados</h3>
                         <hr class="project-divider">
                         <div class="project-info">
-                            <strong>Cliente:</strong> 
-                            Centauro
+                            <strong>Cliente:</strong> Centauro
                         </div>
                         <br>
                         <div class="project-description">
-                            <strong>Descritivo:</strong>
-                             Migração completa de ambiente on-premise (Oracle e SQL Server) para AWS, implementando Data Lake e Data Warehouse modernos. Desenvolvimento de pipelines ETL/ELT automatizados com Taled, implementação de governança de dados e monitoramento em tempo real para otimização de performance e redução de custos operacionais.
+                            Migração completa de ambiente on-premise (Oracle e SQL Server) para AWS, implementando Data Lake e Data Warehouse modernos. Desenvolvimento de pipelines ETL/ELT automatizados com Taled, implementação de governança de dados e monitoramento em tempo real para otimização de performance e redução de custos operacionais.
                         </div>
                     </div>
                 </div>
