--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                     <div class="project-content">
                         <h3 class="project-title">Modernização de Plataforma de Dados</h3>
                         <div class="project-info">
-                            <strong>Cliente:</strong> Centauro
+                            <strong>Cliente:</strong> Centauro<br>
                         </div>
                         <hr class="project-divider">
                         <br>
