Added line break after client name in project card for "Modernização de Plataforma de Dados" in index.html to enhance layout and readability.

--- a/index.html
+++ b/index.html
@@ -401,7 +401,8 @@
                     <div class="project-content">
                         <h3 class="project-title">Modernização de Plataforma de Dados</h3>
                         <div class="project-info">
-                            <strong>Cliente:</strong> Centauro<br>
+                            <strong>Cliente:</strong> Centauro
+                            <br>
                         </div>
                         <hr class="project-divider">
                         <br>
