Updated project descriptions in index.html to provide more detailed and specific information about each project, enhancing clarity and context for the reader.

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                         </div>
                         <br>
                         <div class="project-description">
-                            <strong>Descritivo:</strong> Implementação de arquitetura de eventos distribuídos com Confluent (Kafka) para streaming de dados em tempo real. Desenvolvimento de soluções de Data Mesh, automação de pipelines ETL/ELT e monitoramento em tempo real para processamento eficiente de dados.
+                            Implementação de arquitetura de eventos distribuídos com Confluent (Kafka) para streaming de dados em tempo real. Desenvolvimento de soluções de Data Mesh, automação de pipelines ETL/ELT e monitoramento em tempo real para processamento eficiente de dados.
                         </div>
                     </div>
                 </div>
@@ -434,7 +434,7 @@
                         </div>
                         <br>
                         <div class="project-description">
-                            <strong>Descritivo:</strong> Desenvolvimento de Data Lake corporativo unificado para integração entre canais físicos e digitais. Implementação de pipelines de dados em tempo real, dashboards executivos integrados e governança de dados centralizada para experiência omnichannel completa.
+                            Desenvolvimento de solução para unificação de estoque entre loja física (IBM Informix), e-commerce (SQL Server) e sistema central (SAP). Implementação de sincronização automática de dados entre os sistemas para manter o estoque atualizado em tempo real em todos os canais, eliminando inconsistências e melhorando a experiência do cliente.
                         </div>
                     </div>
                 </div>
@@ -447,7 +447,7 @@
                         </div>
                         <br>
                         <div class="project-description">
-                            <strong>Descritivo:</strong> Desenvolvimento de solução robusta de segurança e privacidade de dados com implementação de estratégias de data masking em AWS. Criação de algoritmos de desmascaramento seletivo, integração com políticas de compliance (LGPD, GDPR) e monitoramento completo de acesso a dados.
+                            <strong>Descritivo:</strong> Desenvolvimento de sistema de mascaramento de dados usando tokens entre as camadas Silver e Gold do Data Lake. Implementação de função Lambda no Redshift para descriptografia seletiva de dados, permitindo que apenas usuários autorizados tenham acesso aos dados originais, garantindo segurança e compliance com políticas de privacidade.
                         </div>
                     </div>
                 </div>
@@ -461,7 +461,7 @@
                         </div>
                         <br>
                         <div class="project-description">
-                            <strong>Descritivo:</strong> Desenvolvimento de ferramenta CLI para análise e otimização de performance DBT com AWS Redshift. Implementação de boas práticas de desenvolvimento, automação de testes de performance e criação de documentação completa com guidelines para equipes de desenvolvimento.
+                            <strong>Descritivo:</strong> Desenvolvimento da CLI "dbt-perf" com 3 camadas de validação: validação de erros nos modelos DBT, análise de performance no Redshift com explain de queries e identificação de pontos de melhoria, e sistema de score para aprovação/reprovação automática do deploy dos modelos.
                         </div>
                     </div>
                 </div>
@@ -475,7 +475,7 @@
                         </div>
                         <br>
                         <div class="project-description">
-                            <strong>Descritivo:</strong> Implementação de técnicas avançadas de DataShare no AWS Redshift para otimização de distribuição de carga entre clusters. Desenvolvimento de estratégias de particionamento inteligente, monitoramento de performance e throughput, e automação de balanceamento de carga para máxima eficiência.
+                            <strong>Descritivo:</strong> Criação de DataShare no AWS Redshift compartilhado com 3 clusters para distribuição de carga por área/aplicação. Separação de workloads entre ETL, relatórios de BI e aplicações de negócio, eliminando concorrência de recursos e otimizando performance de cada ambiente.
                         </div>
                     </div>
                 </div>
@@ -496,14 +496,14 @@
 
                 <div class="project-card" data-category="analytics">
                     <div class="project-content">
-                        <h3 class="project-title">Projeto de Analytics de Clientes</h3>
+                        <h3 class="project-title">Projeto de Integração e Analytics para Clientes</h3>
                         <hr class="project-divider">
                         <div class="project-info">
                             <strong>Cliente:</strong> Mills
                         </div>
                         <br>
                         <div class="project-description">
-                            <strong>Descritivo:</strong> Desenvolvimento de modelos avançados de segmentação de clientes com implementação de dashboards executivos. Análise profunda de comportamento e jornada do cliente, automação de relatórios e alertas preditivos, e integração completa com sistemas CRM e ERP para insights estratégicos.
+                            <strong>Descritivo:</strong> Trabalho de Data Engineering para ingestão dos dados das 3 BUs faltantes no Data Lake (Databricks), processando através das camadas Bronze, Silver até Gold. Unificação com dados da BU existente, resultando em 4 BUs consolidadas para análises de cross-sell, churn, vendas e muito mais.
                         </div>
                     </div>
                 </div>
