Added technology badges to project descriptions in index.html, enhancing visibility of tools and technologies used in each project for better context and understanding.

--- a/index.html
+++ b/index.html
@@ -408,6 +408,12 @@
                         <div class="project-description">
                             Migração completa de ambiente on-premise (Oracle e SQL Server) para AWS, implementando Data Lake e Data Warehouse modernos. Desenvolvimento de pipelines ETL/ELT automatizados com Taled, implementação de governança de dados e monitoramento em tempo real para otimização de performance e redução de custos operacionais.
                         </div>
+                        <div class="project-tech">
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-accent">Oracle</span>
+                            <span class="badge badge-accent">SQL Server</span>
+                            <span class="badge badge-warning">Talend</span>
+                        </div>
                     </div>
                 </div>
 
@@ -421,6 +427,11 @@
                         <br>
                         <div class="project-description">
                             Implementação de arquitetura de eventos distribuídos com Confluent (Kafka) para streaming de dados em tempo real. Desenvolvimento de soluções de Data Mesh, automação de pipelines ETL/ELT e monitoramento em tempo real para processamento eficiente de dados.
+                        </div>
+                        <div class="project-tech">
+                            <span class="badge badge-warning">Confluent Kafka</span>
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-danger">Data Mesh</span>
                         </div>
                     </div>
                 </div>
@@ -436,6 +447,11 @@
                         <div class="project-description">
                             Desenvolvimento de solução para unificação de estoque entre loja física (IBM Informix), e-commerce (SQL Server) e sistema central (SAP). Implementação de sincronização automática de dados entre os sistemas para manter o estoque atualizado em tempo real em todos os canais, eliminando inconsistências e melhorando a experiência do cliente.
                         </div>
+                        <div class="project-tech">
+                            <span class="badge badge-accent">Oracle</span>
+                            <span class="badge badge-accent">SQL Server</span>
+                            <span class="badge badge-accent">IBM Informix</span>
+                        </div>
                     </div>
                 </div>
                 <div class="project-card" data-category="security">
@@ -448,6 +464,11 @@
                         <br>
                         <div class="project-description">
                             <strong>Descritivo:</strong> Desenvolvimento de sistema de mascaramento de dados usando tokens entre as camadas Silver e Gold do Data Lake. Implementação de função Lambda no Redshift para descriptografia seletiva de dados, permitindo que apenas usuários autorizados tenham acesso aos dados originais, garantindo segurança e compliance com políticas de privacidade.
+                        </div>
+                        <div class="project-tech">
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-secondary">Python</span>
+                            <span class="badge badge-accent">Spark</span>
                         </div>
                     </div>
                 </div>
@@ -463,6 +484,12 @@
                         <div class="project-description">
                             <strong>Descritivo:</strong> Desenvolvimento da CLI "dbt-perf" com 3 camadas de validação: validação de erros nos modelos DBT, análise de performance no Redshift com explain de queries e identificação de pontos de melhoria, e sistema de score para aprovação/reprovação automática do deploy dos modelos.
                         </div>
+                        <div class="project-tech">
+                            <span class="badge badge-warning">dbt</span>
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-secondary">Python</span>
+                            <span class="badge badge-secondary">CLI</span>
+                        </div>
                     </div>
                 </div>
 
@@ -476,6 +503,11 @@
                         <br>
                         <div class="project-description">
                             <strong>Descritivo:</strong> Criação de DataShare no AWS Redshift compartilhado com 3 clusters para distribuição de carga por área/aplicação. Separação de workloads entre ETL, relatórios de BI e aplicações de negócio, eliminando concorrência de recursos e otimizando performance de cada ambiente.
+                        </div>
+                        <div class="project-tech">
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-secondary">SQL</span>
+                            <span class="badge badge-iac">Terraform</span>
                         </div>
                     </div>
                 </div>
@@ -491,6 +523,12 @@
                         <div class="project-description">
                             <strong>Descritivo:</strong> Implementação de estratégias avançadas de FinOps para Databricks e AWS, incluindo otimização de custos com monitoramento avançado, governança financeira com alocação de custos por projeto, automação de relatórios de custos e alertas para redução significativa nos gastos com infraestrutura cloud.
                         </div>
+                        <div class="project-tech">
+                            <span class="badge badge-success">Databricks</span>
+                            <span class="badge badge-primary">AWS</span>
+                            <span class="badge badge-danger">FinOps</span>
+                            <span class="badge badge-secondary">Python</span>
+                        </div>
                     </div>
                 </div>
 
@@ -504,6 +542,12 @@
                         <br>
                         <div class="project-description">
                             <strong>Descritivo:</strong> Trabalho de Data Engineering para ingestão dos dados das 3 BUs faltantes no Data Lake (Databricks), processando através das camadas Bronze, Silver até Gold. Unificação com dados da BU existente, resultando em 4 BUs consolidadas para análises de cross-sell, churn, vendas e muito mais.
+                        </div>
+                        <div class="project-tech">
+                            <span class="badge badge-success">Databricks</span>
+                            <span class="badge badge-secondary">SQL</span>
+                            <span class="badge badge-light">Power BI</span>
+                            <span class="badge badge-secondary">Streamlit</span>
                         </div>
                     </div>
                 </div>
