Corrected the spelling of "Talend" in the project description of index.html to ensure accuracy and professionalism in the content.

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                         </div>
                         <br>
                         <div class="project-description">
-                            Migração completa de ambiente on-premise (Oracle e SQL Server) para AWS, implementando Data Lake e Data Warehouse modernos. Desenvolvimento de pipelines ETL/ELT automatizados com Taled, implementação de governança de dados e monitoramento em tempo real para otimização de performance e redução de custos operacionais.
+                            Migração completa de ambiente on-premise (Oracle e SQL Server) para AWS, implementando Data Lake e Data Warehouse modernos. Desenvolvimento de pipelines ETL/ELT automatizados com Talend, implementação de governança de dados e monitoramento em tempo real para otimização de performance e redução de custos operacionais.
                         </div>
                         <div class="project-tech">
                             <span class="badge badge-cloud-platforms">AWS</span>
